# Vector_Database

./: CMakeLists.txt
.cache/clangd/index/: _index_factory.h.2343A45BDB785DA6.idx  advanced_options.h.8B1B80EF1023CD67.idx  allocators.h.3BA28EFD7CD5A4DC.idx  allocators.h.D73435FFA4C76D1E.idx  ansicolor_sink-inl.h.BDAB170180E02396.idx  ansicolor_sink.h.FA205D1E0E0841F3.idx  archiver.cpp.44727B043EFCAEF6.idx  archiver.h.ED1629D2719534FE.idx  archivertest.cpp.42AF6E86FADBC2DC.idx  backtracer-inl.h.3CEA3840FD663692.idx  backtracer.h.3161E6FCE662C62B.idx  base.h.86E078EFDEBB41E2.idx  biginteger.h.4C068D80BA673B02.idx  biginteger.h.66259B692A26E2FC.idx  bruteforce.h.A7DD6F679AF0E278.idx  cache.h.FE1B6ACD4EF81DCB.idx  capitalize.cpp.E6EB2F8D9B32BD3F.idx  circular_q.h.77A72D71B510FB39.idx  cleanable.h.D5ACCC7791E349FF.idx  clzll.h.4D46E440274AC87E.idx  clzll.h.5B20E7B8613831D7.idx  common-inl.h.304292C219C97CC4.idx  common.h.F681136305940FE6.idx  compaction_job_stats.h.89F7309AFC2AE508.idx  comparator.h.571C0A5581C57C43.idx  condense.cpp.471BC20C92F5D38D.idx  console_globals.h.96A1A0137570EF72.idx  constants.h.35F5139DCF0A1383.idx  core.h.B3C28AC9774CBE9F.idx  db.h.E74603B976557691.idx  diyfp.h.3F070F5FFABA04AE.idx  diyfp.h.A01EAFF0313F9698.idx  document.h.618F40D236F14E3F.idx  document.h.B0F6B915F97A1FB4.idx  dtoa.h.9932904E38376B58.idx  dtoa.h.D26A82EB01C73818.idx  en.h.D9B496CD87035E6A.idx  (+132 more)
include/: _index_factory.h  constants.h  faiss_index.h  hnswlib_index.h  http_server.h  logger.h  scalar_storage.h  vector_database.h
src/: CMakeLists.txt  faiss_index.cpp  hnswlib_index.cpp  http_server.cpp  index_factory.cpp  logger.cpp  scalar_storage.cpp  vdb_server.cpp  vector_database.cpp
